update SampleFormController
