# back/src/main/java/com/yamamoto/yuta/andres/presentation/controller/SampleFormController.java
@@ -3,6 +3,7 @@ package com.yamamoto.yuta.andres.presentation.controller;
 import com.yamamoto.yuta.andres.application.service.SampleFormService;
 import com.yamamoto.yuta.andres.presentation.resource.SampleForm;
 import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
@@ -16,8 +17,8 @@ public class SampleFormController {
     this.sampleFormService = sampleFormService;
   }
 
-  @GetMapping
-  public SampleForm get() {
-    return sampleFormService.get(1);
+  @GetMapping("/{id}")
+  public SampleForm get(@PathVariable("id") Integer id) {
+    return sampleFormService.get(id);
   }
 }
